use builtin multipart handling for form upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -285,7 +285,7 @@
     var ajaxFlag = document.createElement('input');
     ajaxFlag.setAttribute('type', 'hidden');
     ajaxFlag.setAttribute('name', 'ajax');
-    ajaxFlag.setAttribute('value', 1);
+    ajaxFlag.setAttribute('value', 'true');
     form.appendChild(ajaxFlag);
 
     box.addEventListener('click', function () {
