--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 <html>
 <head>
+    <meta name="viewport" content="width=device-width" />
     <title>Shelve</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
+
         html, body {
             height: 100%;
             padding: 0;
@@ -49,8 +54,7 @@
         }
 
         .dropbox {
-            max-width: 100%;
-            width: 400px;
+            width: 100%;
             font-size: 1.25rem; /* 20 */
             position: relative;
             padding: 100px 20px;
@@ -213,6 +217,11 @@
         .box__button:hover,
         .box__button:focus {
             background-color: #0f3c4b;
+        }
+
+        #box {
+            max-width: 100%;
+            width: 400px;
         }
     </style>
 </head>
